--- a/myapp/netscan/templates/netscan/netscan.html
+++ b/myapp/netscan/templates/netscan/netscan.html
@@ -16,26 +16,30 @@
                             {% csrf_token %}
                           <div class="row">
                               <div class="col" >
-                                    <div class>
                                   <input class="form-control form-control-lg mb-3" id="scan_name" type="text" placeholder="Scan Name" data-sb-validations="required" name="scan_name" required/>
-                                  <input class="form-control form-control-lg mb-3" id="shared_with" type="text" placeholder="Shared With" data-sb-validations="required" name="shared_with"/>
                                   <input class="form-control form-control-lg mb-3" id="ipAddress" type="text" placeholder="IP or Network prefix" data-sb-validations="required" name="ip_address" required/>
-                                  {% comment %} <div class="dropdown">
-                                    <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                      Dropdown button
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                      <li><a class="dropdown-item" href="#">Action</a></li>
-                                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    </ul>
-                                  </div> {% endcomment %}
-                                  <div class="invalid-feedback text-white"
-                                      data-sb-feedback="ipAddress:required">IP Address is required.
-                                  </div>
-                                  <div class="col-auto"><button class="btn btn-primary btn-lg mb-3"
+                                  
+                                    <div class="row mb-3">
+                                        <div class="col-md-6">
+                                            <input class="form-control form-control-lg mb-3" id="shared_with" type="text" placeholder="Shared With" data-sb-validations="required" name="shared_with"/>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="dropdown mb-3">
+                                                <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                  Share with
+                                                </button>
+                                                <ul class="dropdown-menu">
+                                                {% for user in users %}
+                                                  <li><a class="dropdown-item" href="#" data-value="{{user.0}}">{{user.0}}</a></li>
+                                                {%endfor%}
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                
+                                  <div class="col-auto mb-3"><button class="btn btn-primary btn-lg mb-3"
                                     id="submitButton" type="submit">Start</button></div>
-                              </div>
+                                </div>
                           </div>
 
                           <!-- Submit success message-->
@@ -65,4 +69,33 @@
   </div>
   <!-- Icons Grid-->
 </main>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        // Get the dropdown items
+        var dropdownItems = document.querySelectorAll('.dropdown-item');
+        
+        // Get the input element
+        var sharedWithInput = document.getElementById('shared_with');
+        
+        // Add click event listeners to the dropdown items
+        dropdownItems.forEach(function(item) {
+          item.addEventListener('click', function() {
+            // Get the selected value
+            var selectedValue = item.getAttribute('data-value');
+            
+            // Get the current input value
+            var currentValue = sharedWithInput.value;
+            
+            // Check if the input is not empty, add a comma before the new value
+            if (currentValue !== '') {
+              currentValue += ', ';
+            }
+            
+            // Update the input value with the selected value
+            sharedWithInput.value = currentValue + selectedValue;
+          });
+        });
+      });
+      
+</script>
 {%endblock%}
