--- a/core/templates/core/reports.html
+++ b/core/templates/core/reports.html
@@ -109,8 +109,8 @@
                                             {% comment %} detrmine scan type {% endcomment %}
                                             {%if item.2 == 0 %}
                                                 <td>Vulnerability scan</td>
-                                            {%else%}
-                                                <td>Unkown scan</td>
+                                            {%elif item.2 == 1%}
+                                                <td>Host discovery scan</td>
                                             {%endif%}
 
                                             {% comment %} detrmine scan status {% endcomment %}
